tests/tests/neg/error_messages/invalid_reflect02.rs
#[flux::reflect]
pub enum State {
    On,
    Off,
}

#[flux_rs::sig(fn () -> State[On])] //~ ERROR cannot find value `On`
pub fn test00() -> State {
    State::On
}
